syntax = "proto3";
package com.omniview.pluginsdk;

import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";

option go_package = "./proto";

enum SettingType {
  TEXT = 0;
  INTEGER = 1;
  FLOAT = 2;
  TOGGLE = 3;
  COLOR = 4;
  DATETIME = 5;
  PASSWORD = 6;
}

message SettingsCategory {
  string id = 1;
  string label = 2;
  string description = 3;
  string icon = 4;
  map<string, Setting> settings = 5;
}

message Setting {
  string id = 1;
  string label = 2;
  string description = 3;
  SettingType type = 4;
  google.protobuf.Any value = 5;
  google.protobuf.Any default = 6;
  repeated SettingOption options = 7;
}

message SettingOption {
  string label = 1;
  string description = 2;
  google.protobuf.Any value  = 3;
}


message GetSettingRequest {
  string id = 1;
}

message SetSettingRequest {
  string id = 1;
  google.protobuf.Any value = 2;
}

message SetSettingsRequest {
  map<string, google.protobuf.Any> settings = 1;
}

message ListSettingsResponse {
  map<string, Setting> settings = 1;
}

service SettingsPlugin {
  rpc ListSettings(google.protobuf.Empty) returns (ListSettingsResponse);
  rpc GetSetting(GetSettingRequest) returns (Setting);
  rpc SetSetting(SetSettingRequest) returns (google.protobuf.Empty);
  rpc SetSettings(SetSettingsRequest) returns (google.protobuf.Empty);
}
